# rl-sfc-placement

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  temp_old_requests.py
archive/models_7/: substrate.pkl
compare/: results_table.tex
models_1/: substrate.pkl
paper/: COMSATS-MS-Format-Thesis.tex  LICENSE  main.tex  preamble.tex
paper/chapters/: 01_introduction.tex  02_literature_review.tex  03_system_model.tex  04_methodology.tex  05_results.tex  06_conclusion.tex
paper/frontmatter/: 01_titlepage.tex  02_certificate_approval.tex  03_declaration.tex  04_certificate.tex  05_dedication.tex  06_acknowledgements.tex  07_abstract.tex
paper/references/: introduction.bib  literature_review.bib  references.tex
presentation/: main.aux  main.nav  main.out  main.tex  main.toc
presentation/appendix/: slides.tex
presentation/frontmatter/: title_and_outline.tex
presentation/preamble/: preamble.tex
presentation/sections/: conclusion.tex  introduction.tex  methodology.tex  results.tex  security_risk.tex  system_model.tex
src/: baselines.py  compare.py  environment.py  eval_reporting.py  gnn_policy.py  model.py  requests.py  risk.py  substrate.py  sweep_risk_lambda.py  train.py
