[project]
name = "rl-sfc-placement"
version = "0.1.0"
description = "RL-based Service Function Chain Placement using Maskable PPO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "torch>=2.10.0",
    "stable-baselines3>=2.7.1",
    "sb3-contrib>=2.7.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "tensorboard>=2.20.0",
    "rich>=14.2.0",
    "torch-geometric>=2.7.0",
]

[tool.uv]
extra-build-dependencies = { pygame = ["setuptools"] }

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "platform_system == 'Windows'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
